VER-4826: Silenced 'Mockito is currently self-attaching to enable the inline-mock-maker' warning