@@ -16,6 +16,13 @@ lazy val microservice = Project(appName, file("."))
   ))
   .settings(ScoverageSettings.settings *)
   .settings(playDefaultPort := 9987)
+  .settings(
+      Test/javaOptions ++=Seq(
+          "--add-opens=java.base/java.lang=ALL-UNNAMED",
+          "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
+          "-XX:+EnableDynamicAgentLoading",
+      )
+  )
 
 lazy val it = project
   .enablePlugins(PlayScala)
